learn_trading_ui_fix

--- a/stock/templates/ipo_market.html
+++ b/stock/templates/ipo_market.html
@@ -1,74 +1,34 @@
-{% extends 'base2.html'%}
-{%block title%}The IPO Markets{%endblock%}
-{%block css%}
-h2{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : yellow;
-    font-family: Times New Roman, Times, serif;
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-p{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : white;
-    font-family: calibri, Times New Roman, Times, serif;
-    font-size : 20px;
-}
-
-h3{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : white;
-    font-family: Times New Roman, Times, serif;
-    text-decoration: underline;
-}
-
-ol{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : white;
-    font-family: calibri, Times New Roman, Times, serif;
-    font-size : 20px;
-}
-
-ul{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : white;
-    font-family: calibri, Times New Roman, Times, serif;
-    font-size : 20px;
-}
-
-table,td,th{
-    
-   margin-left: 20px;
-    margin-right: 20px;
-    text-align: center;
-    border: 1px solid white;
-    padding: 10px;
-    
-}
-{%endblock%}
-{%block body%}
-<h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">The IPO Markets</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+        body {
+            background-color: black;
+        }
+        
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+   
+        </style>
+    </head>
+    <body>
+        <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">The IPO Markets</h1>
     <h2>3.1 – Overview</h2>
 <p>The previous chapter gave us an understanding of how a company evolved right from the idea generation stage to all the way until it decides to file for an IPO. The idea behind creating the fictional story in the previous chapter was to give you a sense of how a business matures over time. The emphasis obviously was on the different stages of business and funding options available at various stages of business. The previous chapter gives you a perspective of what a company would have gone through before it comes out to the public to offer its shares.</p>
 <p>This is extremely important to know because the IPO market, also called the <strong>Primary market</strong> sometimes attracts companies offering their shares to the public without actually going through a healthy round of funding in the past. A few rounds of funding by credible VC and PE firms validate the quality of the business and its promoters. Of course, you need to treat this with a pinch of salt but nevertheless it acts as an indicator to identify well run companies.</p>
@@ -148,4 +108,6 @@ table,td,th{
 <p><em><em><img loading="lazy" class="alignnone wp-image-283" src="http://zerodha.com/varsity/wp-content/uploads/2014/08/glossary.png" alt="glossary" width="26" height="19" /> </em></em>Fixed Price IPO<em> –</em>Sometimes the companies fix the price of the IPO and do not opt for a price band. Such issues are called fixed price IPO</p>
 <p><em><em><img loading="lazy" class="alignnone wp-image-283" src="http://zerodha.com/varsity/wp-content/uploads/2014/08/glossary.png" alt="glossary" width="26" height="19" /> </em></em>Price Band and Cut off price<em> –</em>Price band is a price range between which the stock gets listed. For example, if the price band is between Rs.100 and Rs.130, then the issue can list within the range. Let’s says it gets listed at 125, then 125 is called the cut off price.</p>
 
-{%endblock%}
+    </body>
+</html>
+
