--- a/stock/templates/regulators.html
+++ b/stock/templates/regulators.html
@@ -1,62 +1,34 @@
-{% extends 'base2.html'%}
-{%block title%}Regulators{%endblock%}
-{%block css%}
-h2{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : yellow;
-    font-family: Times New Roman, Times, serif;
-    font-weight: bold;
-    text-decoration: underline;
-}
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+        body {
+            background-color: black;
+        }
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+   
 
-p{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : white;
-    font-family: calibri, Times New Roman, Times, serif;
-    font-size : 20px;
-}
+</style>
+</head>
+<body>
 
-h3{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : white;
-    font-family: Times New Roman, Times, serif;
-    text-decoration: underline;
-}
-
-ol{
-    margin-top : 15px;
-    margin-bottom:30px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align : left;
-    color : white;
-    font-family: calibri, Times New Roman, Times, serif;
-    font-size : 20px;
-}
-
-table,td,th{
-    
-   margin-left: 20px;
-    margin-right: 20px;
-    text-align: center;
-    border: 1px solid white;
-    padding: 10px;
-    
-}
-{%endblock%}
-{%block body%}
 <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Regulators</h1>
     <h2>2.1 What is the stock market?</h2>
 <p>Investing in equities is an important investment that we make to generate inflation-beating returns. This was the conclusion we drew from the previous chapter. Having said that, how do we go about investing in equities? Clearly, before we dwell further into this topic, it is essential to understand the ecosystem in which equities operate.</p>
@@ -89,5 +61,5 @@ table,td,th{
 <li>Large investors with huge cash pile should not manipulate the markets</li>
 <li>Overall development of markets</li>
 </ol>
-
-{%endblock%}
+</body>
+</html>
