--- a/stock/templates/base.html
+++ b/stock/templates/base.html
@@ -54,12 +54,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/news" disabled>News</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/about" disabled>About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact" disabled>Contact Us</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Virtual Trading
