Commented and Removed monthly performance and nifty 50 charts based on lstm from homepage

--- a/stock/templates/index.html
+++ b/stock/templates/index.html
@@ -326,7 +326,7 @@ text-shadow: 0 0 10px #289aab;
 
 
 
-<div class="card-deck mb-5 my-5 mr-0 ml-2 pl-5 pr-5">
+<!-- <div class="card-deck mb-5 my-5 mr-0 ml-2 pl-5 pr-5">
     <div class="card ml-5 mr-5 ">
         <img class="card-img-top" src="{% static 'img/card3.png' %}" alt="Card image cap" height="300">
         <div class="card-body">
@@ -364,7 +364,6 @@ text-shadow: 0 0 10px #289aab;
                 <a href="https://share.streamlit.io/atharva360/heatmap/heatmap.py" class="btn btn-outline-success  mt-2"
                     style="text-align:center;">Check</a>
             </div>
-            <!-- <a href="{% url 'delete_stock' %}" class="btn btn-danger">Delete Stock</a> -->
         </div>
         <br>
         {% else %}
@@ -373,7 +372,7 @@ text-shadow: 0 0 10px #289aab;
         </center>
         {% endif %}
     </div>
-</div>
+</div> -->
 
 </div>
 
