Corrected the typos in delete stock in watchlist

--- a/stock/templates/add_stock.html
+++ b/stock/templates/add_stock.html
@@ -101,7 +101,7 @@ margin-right:-5px; {% endcomment %}
     <div class="resultcolumn">
         <table class="table table-bordered">
             <tr style="background:black;color:yellow;">
-                <th scope="col">Previouas Close</th>
+                <th scope="col">Previous Close</th>
             </tr>
             <tr>
                 {% for i in previousClose %}
@@ -141,7 +141,7 @@ margin-right:-5px; {% endcomment %}
     <div class="resultcolumn">
         <table class="table table-bordered">
             <tr style="background:black;color:yellow;">
-                <th scope="col">Previouas Close</th>
+                <th scope="col">Stocks available to be deleted</th>
             </tr>
             <tr style="color:white;">
                 {% for i in data %}
