commented about, contact and prediction

--- a/stock/templates/prices.html
+++ b/stock/templates/prices.html
@@ -90,7 +90,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/news" disabled>News</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/about" disabled>About</a>
                     </li>
                     <li class="nav-item">
@@ -98,7 +98,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://localhost:8501" disabled>Stock Prediction</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/index_learn" disabled>Learn Trading</a>
 
