--- a/stock/templates/finalBuy.html
+++ b/stock/templates/finalBuy.html
@@ -109,12 +109,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/news">News</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact Us</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Virtual Trading
@@ -125,10 +125,10 @@
                           <a class="dropdown-item" href="portfolio">Portfolio</a>
                           <a class="dropdown-item" href="transactions">Transactions</a>
                       </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/prediction">Stock Prediction</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item"> -->
                         <a class="nav-link" href="/index_learn">Learn Trading</a>
                     </li>
                     
