--- a/stock/templates/finalSell.html
+++ b/stock/templates/finalSell.html
@@ -88,7 +88,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/news">News</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
@@ -96,7 +96,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/prediction">Stock Prediction</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/index_learn">Learn Trading</a>
                     </li>
