--- a/stock/templates/sell.html
+++ b/stock/templates/sell.html
@@ -99,7 +99,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/news">News</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
@@ -107,7 +107,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/prediction">Stock Prediction</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/index_learn">Learn Trading</a>
                     </li>
