changed class name

--- a/stock/templates/desc.html
+++ b/stock/templates/desc.html
@@ -139,7 +139,7 @@
         </div>
         <div class="dismiss-btn">
             <button id="dismiss-popup-btn" >
-               <a href="https://share.streamlit.io/atharva360/heatmap/monthprediction.py" style="color:white; text-decoration:none;"> Dismiss</a>
+               <a href="" style="color:white; text-decoration:none;"> Dismiss</a>
             </button>
         </div>
     </div>
