--- a/stock/templates/index.html
+++ b/stock/templates/index.html
@@ -361,7 +361,7 @@ text-shadow: 0 0 10px #289aab;
             {% if user.is_authenticated %}
             <p style="font-style: italic;font-size:20px; text-align:center">Click below to see HeatMap of NIFTY50</p>
             <div class="text-center">
-                <a href="https://share.streamlit.io/atharva360/heatmap/heatmap.py" class="btn btn-outline-success  mt-2"
+                <a href="" class="btn btn-outline-success  mt-2"
                     style="text-align:center;">Check</a>
             </div>
         </div>
