--- a/stock/templates/portfolio11.html
+++ b/stock/templates/portfolio11.html
@@ -211,7 +211,7 @@ form .btn input[type="submit"] {
 }
 
 
-.atharva {
+.sec {
     display: flex;
     margin-left: -5px;
     margin-right: -5px;
@@ -247,7 +247,7 @@ td{
 <section class="home-section" id="home">
     <h1 class="data" style="font-weight:bold; color: yellow;">Portfolio</h1>
     <div class="wrapper">
-        <div class="atharva">
+        <div class="sec">
 
             <table class="table table-bordered" style="width: 200px;" id="stocks">
                 <tr style="background:black;color:white;">
