--- a/stock/templates/delete_stock.html
+++ b/stock/templates/delete_stock.html
@@ -17,7 +17,7 @@
 <h2 style="color: yellow; text-align:center;">Delete Stock...</h2>
 <br>
 {% if ticker %} 
-<div class="atharva" style="text-align: center; margin-left:300px; margin-right:300px;" >
+<div class="sec" style="text-align: center; margin-left:300px; margin-right:300px;" >
 <table class="table table-striped table-bordered table-hover" style="color:yellow;">
     <thead class="thead-light">
         <tr>
