--- a/stock/templates/transactions.html
+++ b/stock/templates/transactions.html
@@ -154,7 +154,7 @@ form .btn input[type="submit"] {
 }
 
 
-.atharva {
+.sec {
     display: flex;
     margin-left: -5px;
     margin-right: -5px;
@@ -211,7 +211,7 @@ td{
     <h2 style="text-align:center; color: yellow;">Sell Transactions</h2>
     {% comment %} <a href="trade">click</a> {% endcomment %}
     <br>
-    <div class="atharva" >
+    <div class="sec" >
         <table class="table table-striped table-bordered table-hover" >
             <thead class="thead-light">
                 <tr>
@@ -241,7 +241,7 @@ td{
     <h2 style="text-align:center; color: yellow;">Buy Transactions</h2>
     {% comment %} <a href="trade">click</a> {% endcomment %}
     <br>
-    <div class="atharva" style="text-align: center;" >
+    <div class="sec" style="text-align: center;" >
         <table class="table table-striped table-bordered table-hover">
             <thead class="thead-light">
                 <tr>
