--- a/stock/templates/base.html
+++ b/stock/templates/base.html
@@ -61,7 +61,7 @@
                         <a class="nav-link" href="/contact" disabled>Contact Us</a>
                     </li> -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Virtual Trading
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -180,7 +180,7 @@ SignUp
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="username">Username</label>
-                                <input type="text" class="form-control" id="loginusername" name="loginusername" placeholder=" username" required>
+                                <input type="text" class="form-control" id="loginusername" name="loginusername" placeholder="Enter your username" required>
                             </div>
 
                             <div class="form-group">
