--- a/stock/templates/base.html
+++ b/stock/templates/base.html
@@ -60,16 +60,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/contact" disabled>Contact Us</a>
                     </li> -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Virtual Trading
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="BuyPage">Buy</a>
-                          <a class="dropdown-item" href="SellPage">Sell</a>
-                          <a class="dropdown-item" href="portfolio">Portfolio</a>
-                          <a class="dropdown-item" href="transactions">Transactions</a>
-                      </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/BuyPage">Buy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/SellPage">Sell</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/transactions">Transactions</a>
+                    </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Stock Prediction
