--- a/stock/templates/base2.html
+++ b/stock/templates/base2.html
@@ -44,23 +44,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/news">News</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/BuyPage">Buy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contact Us</a>
-                    </li> -->
-                    <<li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Virtual Trading
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="BuyPage">Buy</a>
-                          <a class="dropdown-item" href="SellPage">Sell</a>
-                          <a class="dropdown-item" href="portfolio">Portfolio</a>
-                          <a class="dropdown-item" href="transactions">T</a>
-                      </li> 
-                      
+                        <a class="nav-link" href="/SellPage">Sell</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/transactions">Transactions</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/index_learn">Learn Trading</a>
                     </li>
