--- a/stock/templates/base2.html
+++ b/stock/templates/base2.html
@@ -58,7 +58,7 @@
                           <a class="dropdown-item" href="BuyPage">Buy</a>
                           <a class="dropdown-item" href="SellPage">Sell</a>
                           <a class="dropdown-item" href="portfolio">Portfolio</a>
-                          <a class="dropdown-item" href="transactions">T</a>
+                          <a class="dropdown-item" href="transactions">Transactions</a>
                       </li> 
                       
                     <li class="nav-item">
