--- a/stock/templates/buy.html
+++ b/stock/templates/buy.html
@@ -168,7 +168,7 @@
             <input type="hidden" id="oldQuan" name="oldQuan" value="{{item.quantity}}">
             {% endfor %}
             <input type="hidden" id="count1" name="count1" value="{{count1}}"> {% endcomment %}
-            <input class="form-control mr-sm-1" type="search" placeholder="Enter The Quantitiy" aria-label="Search" name="quan" width="10px"><br>
+            <input class="form-control mr-sm-1" type="number" placeholder="Enter The Quantitiy" aria-label="Search" name="quan" width="10px" min="1"><br>
             <button class="btn btn-success my-2 my-sm-0 mr-5" type="submit">BUY</button>
         </form>
         <br>
