--- a/stock/templates/base.html
+++ b/stock/templates/base.html
@@ -49,17 +49,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/news" disabled>News</a>
+                        <a class="nav-link" href="/news">News</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="/about" disabled>About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact" disabled>Contact Us</a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/BuyPage">Buy</a>
                     </li>
@@ -72,13 +66,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/transactions">Transactions</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Stock Prediction
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="/desc2">LSTM</a>
-                      </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/index_learn" disabled>Learn Trading</a>
 
