--- a/stock/templates/base2.html
+++ b/stock/templates/base2.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/news">News</a>
@@ -54,19 +54,8 @@
                         <a class="nav-link" href="/portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contact Us</a>
-                    </li> -->
-                    <<li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Virtual Trading
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="BuyPage">Buy</a>
-                          <a class="dropdown-item" href="SellPage">Sell</a>
-                          <a class="dropdown-item" href="portfolio">Portfolio</a>
-                          <a class="dropdown-item" href="transactions">T</a>
-                      </li> 
-                      
+                        <a class="nav-link" href="/transactions">Transactions</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/index_learn">Learn Trading</a>
                     </li>
