login signup close button fixed + typos

--- a/stock/templates/base.html
+++ b/stock/templates/base.html
@@ -105,7 +105,7 @@ Login
 </button>
 
             <button type="button" class="btn btn-success mr-2" data-toggle="modal" data-target="#signupModal">
-SignUp
+Sign Up
 </button> {% endif %}
         </div>
 
@@ -115,8 +115,8 @@ SignUp
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="signupModal">signup now</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <h5 class="modal-title" id="signupModal">Register</h5>
+                        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <form action="/signup" method='post'>
@@ -161,8 +161,8 @@ SignUp
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="loginModal">login now</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <h5 class="modal-title" id="loginModal">Login</h5>
+                        <button type="button" href="/" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <form action="/login" method="POST">
