fixed the padding for logo

--- a/stock/templates/base.html
+++ b/stock/templates/base.html
@@ -42,7 +42,7 @@
 <body style='background-color: black; '>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="color:yellow; padding:3px 3px 3px 3px;border: solid white 3px; border-radius: 25px;">EasyTrade</a>
+            <a class="navbar-brand" style="color:yellow; padding:3px 6px;border: solid white 3px; border-radius: 25px;">EasyTrade</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
