--- a/stock/templates/index_learn.html
+++ b/stock/templates/index_learn.html
@@ -40,6 +40,9 @@
   opacity: 1;
   right: 0;
 }
+.video-container{
+  padding:45px;
+}
 {%endblock%}
 {%block body %} 
 <h1 style="margin-top: 15px;text-align:center; color:yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Stock Market & Financial Education<h1>
@@ -80,5 +83,22 @@
     <button class="button" style="vertical-align:middle"><span>Start Learning  </span></button>
     </a>
   </div>
+</div>
+<div style="display: flex;">
+<div style="padding-left:50px; padding-right: 30px;">
+  <iframe width="420" height="315" 
+  src="https://www.youtube.com/embed/QaKbnXndWUY">
+  </iframe>
+</div>
+<div style="padding-right:30px;">
+  <iframe width="420" height="315" 
+  src="https://www.youtube.com/embed/mKmD70bPLUY">
+  </iframe>
+</div>
+<div style="padding-right: 30px;">
+  <iframe width="420" height="315" 
+  src="https://www.youtube.com/embed/OrF2mFRNveU">
+  </iframe>
+</div>
 </div>
 {%endblock%}
